--- a/product.html
+++ b/product.html
@@ -16,10 +16,10 @@
     <section class="product-details">
         <div class="image-slider">
             <div class="product-images">
-                <img src="img/product image 1.png" class="active" alt="product img">
-                <img src="img/product image 2.png" alt="product img">
-                <img src="img/product image 3.png" alt="product img">
-                <img src="img/product image 4.png" alt="product img">
+                <img src="product image 1.png" class="active" alt="product img">
+                <img src="product image 2.png" alt="product img">
+                <img src="product image 3.png" alt="product img">
+                <img src="product image 4.png" alt="product img">
             </div>
         </div>
         <div class="details">
