--- a/product.html
+++ b/product.html
@@ -16,7 +16,7 @@
     <section class="product-details">
         <div class="image-slider">
             <div class="product-images">
-                <img src="img/product image .png" class="active" alt="product img">
+                <img src="img/product image 3.png" class="active" alt="product img">
                 <img src="img/product image 2.png" alt="product img">
                 <img src="img/product image 3.png" alt="product img">
                 <img src="img/product image 4.png" alt="product img">
